add/move fields

--- a/index.html
+++ b/index.html
@@ -229,8 +229,12 @@
 * Voyeurism
 ? Refers to the derivation of sexual stimulation from either/or the action of watching, typically in secret, a person (or people) reveal themselves or do something otherwise explicit, or the act of revealing one's self and/or doing something otherwise explicit with the intent to be viewed.
 
-#Pain
+#Physicality
 (Receiving)
+* Light Spanking
+? The act of striking the buttocks of another character, lightly, still with the loud spank, but with no intent of bruising
+* Heavy spanking
+? The act of striking the buttocks of another character, with hard intent, possibly resulting in bruising
 * Light pain
 ? Refers to the inclusion of light physical pain due to acts which are directly sexual.
 * Heavy pain
@@ -242,6 +246,9 @@
 ? The act of holding down the other character's face down
 * Hair pulling
 ? The act of pulling or tugging on another character's hair, or being the recipient of such.
+
+#Pain
+(Receiving)
 * Nipple clamps
 ? pressure device applied to nipples to create pain which produces pleasure.
 * Clothes pins
@@ -256,8 +263,6 @@
 ? The act of being choked until the sub passes out.
 * Beating
 ? Being struck with fists or other objects
-* Spanking
-? The act of striking the buttocks of another character, or being the recipient of such; often as a form of erotic foreplay or as punishment in a BDSM setting.
 * Cock/Pussy slapping
 ? slapping the genitalia of your partner, or recieving such slaps
 * Cock/Pussy torture
