--- a/index.html
+++ b/index.html
@@ -177,6 +177,8 @@
 (General)
 * Blood
 ? Pertains to the inclusion of blood or the retrieval of blood in any form in a sexual context, or engaging in acts which will draw blood. (not cutting)
+* Period
+? The act of being comfortable having sex while on your Period
 * Watersports
 ? The act of being cleaned up in the shower with urine after a session.  This is not a degradation mindset, but more of cleaning up after a session.
 * Cum play
@@ -193,9 +195,9 @@
 #Degradation
 (Receiving)
 * Name calling
-? Engaging in an RP in which one character will be called names, in an attempt to elicit either a response of sexual gratification from the emotions of psychological domination.
+? Engaging in an RP in which one character will be called names, such as "good girl", "little slut", etc, in a playful manner.  Names meant for fun and not degrading, tonality is key.
 * Humiliation
-? Engaging in an RP in which one character will be embarrassed, typically extremely and/or frequently, in an attempt to elicit either a response of sexual gratification from the emotions correlating to humiliation.  Typically a more intense form of degradation.
+? Engaging in an RP in which one character will be embarrassed, typically a more intense form of degradation, tonality is key.
 * Daddy
 ? Using the name "Daddy" to refer to your DOM
 * Sir
@@ -273,21 +275,16 @@
 ? BAM smack dyamn BAM
 * Hot Wax
 ? The act of using wax, typically hot candle wax, as a form of sexual stimulation and/or torture, or receiving such actions.
-* Scratching
-? One character scratching another with their nails or claws, sometimes leaving marks; sometimes but not necessarily painful.
-* Biting
-? The act of biting or being bitten; sometimes painful, sometimes playful.
-* Cutting
-? The act of cutting a partner to cause pain in a sexual context.
+
 
 #Sound
-(Self, Partner)
+(Self)
 * Dirty Talk to DOM
 ? You like to dirty talk to your DOM during sex and RP
 * Dirty Talk from DOM
 ? You like your DOM to talk dirty to you
-* Moaning
-? You like to be loud in bed
+* Vocal During Sex
+? You are/like to be loud in bed with screaming, moaning, and all that good stuff
 
 #Evidence of Play
 (Receiving)
@@ -298,7 +295,11 @@
 * Hidden brusing
 ? Rough physical play that leaves discoloration on skin that may be visible only when fully nude, bikini season safe
 * Scratching
-? Scratching another with their nails, sometimes leaving marks
+? One character scratching another with their nails or claws, sometimes leaving marks; sometimes but not necessarily painful.
+* Biting
+? The act of biting or being bitten; sometimes painful, sometimes playful.
+* Cutting
+? The act of cutting a partner to cause pain in a sexual context.
 * Video
 ? Giving consent to record time together with the intent of watching the video together later.  This allows each person to learn and improve for the next session.  Videos will NEVER be shown outside of this relationship.  PROMISE.
 
