--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
 #Evidence of Play
 (Receiving)
-* Visable bruising
+* Visable Bruising
 ? Rough physical play that leaves discoloration on skin that may be visible with normal clothing (shirt, pants, etc)
 * Somewhat hidden bruising
 ? Rough physical play that leaves discoloration on skin that may be visible with less normal clothing such as bikini, shorts, short sleeve shirt
