--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 * Spit/Saliva - Mouth
 ? The act of spitting a little in your mouth, NOT FULL SPIT, EW LOL
 
-#Degradation
+#Names and Sounds
 (Receiving)
 * Name calling
 ? Engaging in an RP in which one character will be called names, such as "good girl", "little slut", etc, in a playful manner.  Names meant for fun and not degrading, tonality is key.
@@ -202,6 +202,12 @@
 ? Using the name "Daddy" to refer to your DOM
 * Sir
 ? Using the name "Sir" to refer to your DOM
+* Dirty Talk to DOM
+? You like to dirty talk to your DOM during sex and RP
+* Dirty Talk from DOM
+? You like your DOM to talk dirty to you
+* Vocal During Sex
+? You are/like to be loud in bed with screaming, moaning, and all that good stuff
 
 #Touch & Stimulation
 (Receiving)
@@ -242,8 +248,11 @@
 * Heavy pain
 ? Refers to the inclusion of heavy physical pain due to acts which are directly sexual; typically rough or excessive penetrations. This is probably gonna leave a mark.
 * Light face slapping
+? This is not done with intent to hurt, but more for the feeling and sound.
 * Medium face slapping
+? More than less but less than Hard.  You will feel it but it wont leave a mark.  This is always done at the correct angle and spot on face.
 * Hard face slapping
+? This is not done with intent hurt, and with a little pain.  This will not be a full swing of arm angle but with still some force, This is always done at the correct angle and spot on face.
 * Face pressing
 ? The act of holding down the other character's face down
 * Hair pulling
@@ -277,14 +286,7 @@
 ? The act of using wax, typically hot candle wax, as a form of sexual stimulation and/or torture, or receiving such actions.
 
 
-#Sound
-(Self)
-* Dirty Talk to DOM
-? You like to dirty talk to your DOM during sex and RP
-* Dirty Talk from DOM
-? You like your DOM to talk dirty to you
-* Vocal During Sex
-? You are/like to be loud in bed with screaming, moaning, and all that good stuff
+
 
 #Evidence of Play
 (Receiving)
