--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 * Spit/Saliva - Pussy
 ? The act of spitting a little on your pussy
 * Spit/Saliva - Body
-? Spit The act of spitting a little on your body, chest, thighs, etc
+? Spit The act of spitting a little on your body, chest, thighs, etc.   
 * Spit/Saliva - Mouth
 ? The act of spitting a little in your mouth, NOT FULL SPIT, EW LOL
 
