--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@
 ? Refers to extended scenes of foreplay prior to explicit, sexual intercourse, which may be physical and/or verbal, typically to arouse one's partner to the point of sexual frustration or desperation.
 * Nipple play
 ? Nipple play is the practice of touching, rubbing, or sucking on nipples during sex.
+* Non-Alcohol for Headspace
+? The use of other things to get into the mood in the context of an RP, typically use of marijuana, shrooms, etc to elevate the sensations of sex.
+* Alcohol for Headspace
+? The use of alcohol in the context of an RP to elevate the sensations of sex.
+* Non-consent
+? Being taken against one's will, often through force (safe)
+* Sleep play
+? Engaging in sexual acts with an unconscious/asleep partner
 
 #Ass Play
 (Receiving)
@@ -127,7 +135,7 @@
 ? The receiver is restrained from being able to move by physical touch
 
 #Toys
-(Partner)
+(Self)
 * Dildos
 ? an object shaped like an erect penis used for sexual stimulation.
 * Butt Plugs
@@ -162,16 +170,7 @@
 * Orgasm denial
 ? Refers to the dominant denying the submissive orgasm.
 
-#No Consent
-(Receiving)
-* Non-consent
-? Being taken against one's will, often through force (safe)
-* Non-Alcohol
-? The use of other things to get into the mood in the context of an RP, typically use of marijuana, shrooms, etc to elevate the sensations of sex.
-* Alcohol
-? The use of alcohol in the context of an RP to elevate the sensations of sex.
-* Sleep play
-? Engaging in sexual acts with an unconscious/asleep partner
+
 
 #Fluids
 (General)
