--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 * Handjob / Fingering
 ? Sexual stimulation by direct, physical contact of the hands or fingers to the genitals.
 * Blowjob
-? Sexual stimulation by direct, physical contact of the mouth or tongue to male genitals
+? Sexual stimulation by direct, physical contact of the mouth or tongue to male genitals.
 * Deep throat
 ? The act of penetrating the mouth of another character to the depths at which the penis or insertion enters the back of the mouth cavity and/or throat, sometimes causing a gag reflex, or being the recipient of such actions.
 * Face Fucking
