--- a/index.html
+++ b/index.html
@@ -182,13 +182,13 @@
 * Cum play
 ? Any number of situations focused on playing with cum.
 * Squirt
-? A yummy grapefruit soda... that leaves satification
+? A yummy grapefruit soda... that leaves satification.
 * Spit/Saliva - Pussy
-? The act of spitting a little on your pussy
+? The act of spitting a little on your pussy.
 * Spit/Saliva - Body
 ? Spit The act of spitting a little on your body, chest, thighs, etc.   
 * Spit/Saliva - Mouth
-? The act of spitting a little in your mouth, NOT FULL SPIT, EW LOL
+? The act of spitting a little in your mouth, NOT FULL SPIT, EW LOL.
 
 #Names and Sounds
 (Receiving)
