--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
 * Humiliation
 ? Engaging in an RP in which one character will be embarrassed, typically a more intense form of degradation, tonality is key.
 * Daddy
-? Using the name "Daddy" to refer to your DOM
+? Using the name "Daddy" to refer to your DOM.
 * Sir
-? Using the name "Sir" to refer to your DOM
+? Using the name "Sir" to refer to your DOM.
 * Dirty Talk to DOM
 ? You like to dirty talk to your DOM during sex and RP
 * Dirty Talk from DOM
