--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 * Sir
 ? Using the name "Sir" to refer to your DOM.
 * Dirty Talk to DOM
-? You like to dirty talk to your DOM during sex and RP
+? You like to dirty talk to your DOM during sex and RP.
 * Dirty Talk from DOM
 ? You like your DOM to talk dirty to you
 * Vocal During Sex
