--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 * Swallowing
 ? The act of orally consuming semen, either directly or indirectly from a penis.
 * Facials
-? The act of cumming directly onto one's face
+? The act of cumming directly onto one's face.
 * Cunnilingus
 ? Sexual stimulation by direct, physical contact of the mouth or tongue to female genitals
 * Face-sitting
