--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 * Blood
 ? Pertains to the inclusion of blood or the retrieval of blood in any form in a sexual context, or engaging in acts which will draw blood. (not cutting)
 * Period
-? The act of being comfortable having sex while on your Period
+? The act of being comfortable having sex while on your period.
 * Watersports
 ? The act of being cleaned up in the shower with urine after a session.  This is not a degradation mindset, but more of cleaning up after a session.
 * Cum play
