--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 * Non-consent
 ? Being taken against one's will, often through force (safe)
 * Sleep play
-? Engaging in sexual acts with an unconscious/asleep partner
+? Engaging in sexual acts with an unconscious/asleep partner.
 
 #Toys
 (Self)
