--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 * Alcohol for Headspace
 ? The use of alcohol in the context of an RP to elevate the sensations of sex.
 * Non-consent
-? Being taken against one's will, often through force (safe)
+? Being taken against one's will, often through force (safe).
 * Sleep play
 ? Engaging in sexual acts with an unconscious/asleep partner.
 
