--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 * You and 2 males
 * You and 2 females
 * Orgy
-? multiple male and female characters
+? multiple male and female characters. 
 
 #General
 (General)
