--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 * Facials
 ? The act of cumming directly onto one's face.
 * Cunnilingus
-? Sexual stimulation by direct, physical contact of the mouth or tongue to female genitals
+? Sexual stimulation by direct, physical contact of the mouth or tongue to female genitals.
 * Edging
 ? Keeping on the edge of climax without orgasm
 * Teasing
