--- a/index.html
+++ b/index.html
@@ -89,29 +89,15 @@
 ? Refers to extended scenes of foreplay prior to explicit, sexual intercourse, which may be physical and/or verbal, typically to arouse one's partner to the point of sexual frustration or desperation.
 * Nipple play
 ? Nipple play is the practice of touching, rubbing, or sucking on nipples during sex.
-* Non-Alcohol for Headspace
-? The use of other things to get into the mood in the context of an RP, typically use of marijuana, shrooms, etc to elevate the sensations of sex.
-* Alcohol for Headspace
+* Alcohol
 ? The use of alcohol in the context of an RP to elevate the sensations of sex.
+* Non-Alcohol
+? The use of other things to get into the mood in the context of an RP, typically use of marijuana, shrooms, etc to elevate the sensations of sex.
 * Non-consent
 ? Being taken against one's will, often through force (safe).
 * Sleep play
 ? Engaging in sexual acts with an unconscious/asleep partner.
-
-#Toys
-(Self)
-* Dildos
-? an object shaped like an erect penis used for sexual stimulation.
-* Butt Plugs
-? a sex toy of a type designed to be inserted into the rectum.
-* Vibrators
-? a vibrating device used for sexual stimulation.
-
-#Ass Play
-(Receiving)
-* Anal toys
-? Refers to the inclusion of anal penetration with sex toys, including but not limited to dildos, vibrators, anal eggs, anal beads, etc.
-* Anal sex/pegging
+* Anal sex
 ? Being penetrated by a partner, with a penis or strap-on
 * Rimming
 ? The act of giving oral stimulation to a partner's anus, by the means of licking and/or penetrating the recipient's anus with the tongue.
@@ -119,6 +105,15 @@
 ? The act of penetrating a single character's anus with two objects, including but not limited to the penis, sex toys, fist etc., or receiving such.
 * 3+ Penetration
 ? The act of penetrating a single character so that all 3 holes are filled in some way with toys, plugs, and cock.
+
+#Toys
+(Self)
+* Dildos
+? an object shaped like an erect penis used for sexual stimulation.
+* Butt Plugs
+? a sex toy of a type designed to be inserted into your butt
+* Vibrators
+? a vibrating device used for sexual stimulation.
 
 #Restrictive
 (Partner)
