--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 * Dildos
 ? an object shaped like an erect penis used for sexual stimulation.
 * Butt Plugs
-? a sex toy of a type designed to be inserted into your butt
+? a sex toy of a type designed to be inserted into your butt :)
 * Vibrators
 ? a vibrating device used for sexual stimulation.
 
