--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 * Sleep play
 ? Engaging in sexual acts with an unconscious/asleep partner.
 * Anal sex
-? Being penetrated by a partner, with a penis or strap-on
+? Being penetrated by a partner, with a penis or strap-on.
 * Rimming
 ? The act of giving oral stimulation to a partner's anus, by the means of licking and/or penetrating the recipient's anus with the tongue.
 * Double penetration
