--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
 * Ball Gag
 ? The act of placing and lodging an object in another character's mouth to force him or her to breathe through his or her nose, as well as creating the inability to speak, or receiving such actions.
 * Collar
-? Wearing a collar around the neck
+? Wearing a collar around the neck.
 * Leash
-? Being lead around on a leash
+? Having a chain attached to your collar.  Fun to use to guide you to bedroom, play choke, or just liking the way chains hear and feel 
 * Bondage (Light)
 ? The use of bondage that is mild or moderate in either the position in which it causes the bound character to be in, the duration for which the character will be in bondage, the level of discomfort caused by the bondage or the amount of immobilization that will occur due to the bondage.
 * Bondage (Medium)
