--- a/index.html
+++ b/index.html
@@ -69,34 +69,24 @@
 
 #General
 (General)
+* Teasing
+? Refers to extended scenes of foreplay prior to explicit, sexual intercourse, which may be physical and/or verbal, typically to arouse one's partner to the point of sexual frustration or desperation.
 * Handjob / Fingering
 ? Sexual stimulation by direct, physical contact of the hands or fingers to the genitals.
 * Blowjob
 ? Sexual stimulation by direct, physical contact of the mouth or tongue to male genitals.
-* Deep throat
-? The act of penetrating the mouth of another character to the depths at which the penis or insertion enters the back of the mouth cavity and/or throat, sometimes causing a gag reflex, or being the recipient of such actions.
-* Face Fucking
-? The act of a fucking your partners face, whether upright or upside down, to the degree agreed upon prior.
+* Deep Throat
+? Enjoying the act of oral sex with the goal to take the full cock in your mouth and throat, sometimes causing a gag reflex.
+* Normal Face Fucking
+? Enjoying the act of a your partner fucking your face, whether upright or upside down, but without additional force of pushing head down further with hands 
+* Hard Face Fucking
+? Enjoying the act of a your partner fucking your face as described above, but with the partner allowed to use hands and force down further or harder
 * Swallowing
 ? The act of orally consuming semen, either directly or indirectly from a penis.
 * Facials
-? The act of cumming directly onto one's face.
+? The act of cumming directly on to one's face.
 * Cunnilingus
 ? Sexual stimulation by direct, physical contact of the mouth or tongue to female genitals.
-* Edging
-? Keeping on the edge of climax without orgasm
-* Teasing
-? Refers to extended scenes of foreplay prior to explicit, sexual intercourse, which may be physical and/or verbal, typically to arouse one's partner to the point of sexual frustration or desperation.
-* Nipple play
-? Nipple play is the practice of touching, rubbing, or sucking on nipples during sex.
-* Alcohol
-? The use of alcohol in the context of an RP to elevate the sensations of sex.
-* Non-Alcohol
-? The use of other things to get into the mood in the context of an RP, typically use of marijuana, shrooms, etc to elevate the sensations of sex.
-* Non-consent
-? Being taken against one's will, often through force (safe).
-* Sleep play
-? Engaging in sexual acts with an unconscious/asleep partner.
 * Anal sex
 ? Being penetrated by a partner, with a penis or strap-on.
 * Rimming
@@ -105,6 +95,10 @@
 ? The act of penetrating a single character's anus with two objects, including but not limited to the penis, sex toys, fist etc., or receiving such.
 * 3+ Penetration
 ? The act of penetrating a single character so that all 3 holes are filled in some way with toys, plugs, and cock.
+* Alcohol
+? The use of alcohol in the context of an RP to elevate the sensations of sex.
+* Non-Alcohol
+? The use of other things to get into the mood in the context of an RP, typically use of marijuana, shrooms, etc to elevate the sensations of sex.
 
 #Toys
 (Self)
@@ -117,24 +111,24 @@
 
 #Restrictive
 (Partner)
-* Ball Gag
-? The act of placing and lodging an object in another character's mouth to force him or her to breathe through his or her nose, as well as creating the inability to speak, or receiving such actions.
+* Blindfold
+? Removing the sense of sight
 * Collar
 ? Wearing a collar around the neck.
 * Leash
 ? Having a chain attached to your collar.  Fun to use to guide you to bedroom, play choke, or just liking the way chains hear and feel 
+* Ball Gag
+? The act of placing and lodging an object in another character's mouth to force him or her to breathe through his or her nose, as well as creating the inability to speak, or receiving such actions.
 * Bondage (Light)
 ? The use of bondage that is mild or moderate in either the position in which it causes the bound character to be in, the duration for which the character will be in bondage, the level of discomfort caused by the bondage or the amount of immobilization that will occur due to the bondage.
 * Bondage (Medium)
 ? Harder than light, lighter than hard
 * Bondage (Heavy)
 ? The use of bondage that is extreme in either the position in which it causes the bound character to be in, the duration for which the character will be in bondage, the level of discomfort caused by the bondage or the amount of immobilization that will occur due to the bondage.
-* Wrist restraints
+* Wrist Restraints
 ? Restrainted at the wrist using handcuffs, ropes, and other fun things
 * Restrained by devices
 ? Being tied to furniture, wall mounts or bed posts using chains, ropes, and/or other fun things
-* Physically Restrained
-? The receiver is restrained from being able to move by physical touch
 
 
 #Domination
@@ -222,8 +216,10 @@
 ? A situation in which at least one character will have physical control over the breathing habits of another character, often by either intermittent choking and/or due to the penetration of the throat.
 * Breeding
 ? Entails the mindset of liking the idea of a act of sexual intercourse for the sole purpose of inducing pregnancy.
-* Blindfold
-? Removing the sense of sight
+* Non-consent
+? Being taken against one's will, often through force (safe).
+* Sleep play
+? Engaging in sexual acts with an unconscious/asleep partner.
 * Exhibitionism
 ? Engaging in an RP in which the setting is of a public nature; typically used in conjunction with exhibitionism and/or humiliation.
 * Voyeurism
@@ -252,6 +248,10 @@
 
 #Pain
 (Receiving)
+* Light Nipple play
+? Nipple play is the practice of touching, rubbing, or sucking on nipples during sex.
+* Hard Nipple play
+? Nipple play is the practice of biting, touching, rubbing, or sucking with the intent to cause some pain
 * Nipple clamps
 ? pressure device applied to nipples to create pain which produces pleasure.
 * Clothes pins
