--- a/index.html
+++ b/index.html
@@ -95,19 +95,15 @@
 ? The act of penetrating a single character's anus with two objects, including but not limited to the penis, sex toys, fist etc., or receiving such.
 * 3+ Penetration
 ? The act of penetrating a single character so that all 3 holes are filled in some way with toys, plugs, and cock.
-* Alcohol
-? The use of alcohol in the context of an RP to elevate the sensations of sex.
-* Non-Alcohol
-? The use of other things to get into the mood in the context of an RP, typically use of marijuana, shrooms, etc to elevate the sensations of sex.
-
-#Toys
-(Self)
 * Dildos
 ? an object shaped like an erect penis used for sexual stimulation.
 * Butt Plugs
 ? a sex toy of a type designed to be inserted into your butt :)
 * Vibrators
-? a vibrating device used for sexual stimulation.
+? a vibrating device used for sexual stimulation.* Alcohol
+? The use of alcohol in the context of an RP to elevate the sensations of sex.
+* Non-Alcohol
+? The use of other things to get into the mood in the context of an RP, typically use of marijuana, shrooms, etc to elevate the sensations of sex.
 
 #Restrictive
 (Partner)
@@ -127,7 +123,7 @@
 ? The use of bondage that is extreme in either the position in which it causes the bound character to be in, the duration for which the character will be in bondage, the level of discomfort caused by the bondage or the amount of immobilization that will occur due to the bondage.
 * Wrist Restraints
 ? Restrainted at the wrist using handcuffs, ropes, and other fun things
-* Restrained by devices
+* Restrained by Devices
 ? Being tied to furniture, wall mounts or bed posts using chains, ropes, and/or other fun things
 
 
@@ -167,10 +163,10 @@
 ? The act of being comfortable having sex while on your period.
 * Watersports
 ? The act of being cleaned up in the shower with urine after a session.  This is not a degradation mindset, but more of cleaning up after a session.
-* Cum play
+* Cum Play
 ? Any number of situations focused on playing with cum.
-* Squirt
-? A yummy grapefruit soda... that leaves satification.
+* Squirting
+? A yummy grapefruit soda... that leaves satification. LOL.  Actually, you squirt, like to squirt, or want to try to squirt.
 * Spit/Saliva - Pussy
 ? The act of spitting a little on your pussy.
 * Spit/Saliva - Body
