--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
 #Names and Sounds
 (Receiving)
-* Name calling
+* Name Calling
 ? Engaging in an RP in which one character will be called names, such as "good girl", "little slut", etc, in a playful manner.  Names meant for fun and not degrading, tonality is key.
 * Humiliation
 ? Engaging in an RP in which one character will be embarrassed, typically a more intense form of degradation, tonality is key.
@@ -212,7 +212,7 @@
 ? A situation in which at least one character will have physical control over the breathing habits of another character, often by either intermittent choking and/or due to the penetration of the throat.
 * Breeding
 ? Entails the mindset of liking the idea of a act of sexual intercourse for the sole purpose of inducing pregnancy.
-* Non-consent
+* Non-Consent
 ? Being taken against one's will, often through force (safe).
 * Sleep play
 ? Engaging in sexual acts with an unconscious/asleep partner.
@@ -225,21 +225,21 @@
 (Receiving)
 * Light Spanking
 ? The act of striking the buttocks of another character, lightly, still with the loud spank, but with no intent of bruising
-* Heavy spanking
+* Heavy Spanking
 ? The act of striking the buttocks of another character, with hard intent, possibly resulting in bruising
-* Light pain
+* Light Pain
 ? Refers to the inclusion of light physical pain due to acts which are directly sexual.
-* Heavy pain
+* Heavy Pain
 ? Refers to the inclusion of heavy physical pain due to acts which are directly sexual; typically rough or excessive penetrations. This is probably gonna leave a mark.
-* Light face slapping
+* Light Face Slapping
 ? This is not done with intent to hurt, but more for the feeling and sound.
-* Medium face slapping
+* Medium Face Slapping
 ? More than less but less than Hard.  You will feel it but it wont leave a mark.  This is always done at the correct angle and spot on face.
-* Hard face slapping
+* Hard Face Slapping
 ? This is not done with intent hurt, and with a little pain.  This will not be a full swing of arm angle but with still some force, This is always done at the correct angle and spot on face.
-* Face pressing
+* Face Pressing
 ? The act of holding down the other character's face down
-* Hair pulling
+* Hair Pulling
 ? The act of pulling or tugging on another character's hair, or being the recipient of such.
 
 #Pain
@@ -250,31 +250,28 @@
 ? Nipple play is the practice of biting, touching, rubbing, or sucking with the intent to cause some pain
 * Nipple clamps
 ? pressure device applied to nipples to create pain which produces pleasure.
-* Clothes pins
+* Clothes Pins
 ? Pinching sking between the forks of a clothes pin
-* Caning
-? Caning is a technique used in BDSM in which the dominant repeatedly strikes the submissive with a long flexible cane, usually on the buttocks.
+* Paddles
+? BAM smack dyamn BAM
 * Flogging
 ? The use of toys, typically associated with BDSM and domination/submission, being employed against a submissive or bottom, particularly referring to contact play involving whips of any type, riding crops, paddles or flogs.
-* Gagging / Choking
-? Being made to gag or choke, either by objects inserted into the mouth or hands/objects around the neck.
+* Whips
+? Indiana Jones adds flavor to your session
+* Caning
+? Caning is a technique used in BDSM in which the dominant repeatedly strikes the submissive with a long flexible cane, usually on the buttocks.
+* Gagging
+? Being made to gag by objects inserted into the mouth, possibly resulting in a lot of spit and getting sloppy (not to extreme to make you throw up though)
+* Choking
+? Being made to choke by placing hands around the neck in the proper area, i.e. NOT the wind pipe
 * Asphyxiation
 ? The act of being choked until the sub passes out.
 * Beating
 ? Being struck with fists or other objects
-* Cock/Pussy slapping
-? slapping the genitalia of your partner, or recieving such slaps
-* Cock/Pussy torture
-? Engaging in an RP in which at least one character's genitals will be given negative attention, the intent of which to be to cause physical pain.
-* Whips
-? Indiana Jones adds flavor to your session
-* Paddles
-? BAM smack dyamn BAM
+* Cock slapping
+? slapping my cock on your pussy or face to tease or because you are naughty
 * Hot Wax
 ? The act of using wax, typically hot candle wax, as a form of sexual stimulation and/or torture, or receiving such actions.
-
-
-
 
 #Evidence of Play
 (Receiving)
