--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 ? Expresses an interest in characters that are well-rounded, full in form, and pudgy.
 * Muscular
 ? In shape, works out, has muscles you can feel
-* Small breasts
+* Small Breasts
 ? Expresses an interest in breasts that are particularly small, sometimes to the point of appearing absent.
-* Large breasts
+* Large Breasts
 ? Expresses an interest in breasts that are particularly large.
-* Small cocks
+* Small Cocks
 ? Expresses an interest in cocks that are below average size.
-* Large cocks
+* Large Cocks
 ? Expresses an interest in cocks that are above average size.
 
 #Groupings
@@ -63,9 +63,10 @@
 * You and 1 female
 * You and 1 male, 1 female
 * You and 2 males
+* You and 2+ males
 * You and 2 females
 * Orgy
-? multiple male and female characters. 
+? Multiple males and females all playing at once together.
 
 #General
 (General)
@@ -129,15 +130,15 @@
 
 #Domination
 (As Submissive)
-* General sub
-? Catchall for Dominant/Submissive Activities.
-* Domestic servitude
+* General Sub
+? Catchall for Dominant/Submissive Activities, releasing control to your Dom but always knowing they can say yellow or red to pause/stop a session.  We pretend you dont have control ;)
+* Domestic Servitude
 ? Being served by a butler, waitress, chauffeur, maid or housekeeper, or serving as one.
 * Age Gap
-? Being in the mindset of a wide age gap for play,  a younger version of you.   This can also involve the sub age being less than 18 years old such as a high school student/teacher scenario or older such as a college student/teacher. This can also involve looking at the Dom as your real Daddy.
-* Daddy Dom/little girl
-? not to be confused as your real Daddy/little girl, like in Age play.  This is in reference to calling your Dom, "Daddy"/"girlie", b/c they take care of everything and watch over you like a real Dad/daughter would.
-* Step Daddy/Step daughter
+? Being in the mindset of playing in a role of a specific age selected by the sub.   The sub age being less than 18 years old such as a high school student/teacher scenario, an older age for college student/teacher or looking at the Dom as your real Daddy.
+* Daddy Dom/Little Girl
+? not to be confused as your real Daddy or little girl, like in Age play.  This is in reference to calling your Dom, "Daddy"/"girlie", b/c they take care of everything and watch over you like a real Dad/daughter would.
+* Step Daddy/Step Daughter
 ? Engaging in a RP in which characters are nearly related.
 * Step Brother/Sister
 ? Engaging in a RP in which characters are nearly related.
@@ -158,11 +159,11 @@
 #Fluids
 (General)
 * Blood
-? Pertains to the inclusion of blood or the retrieval of blood in any form in a sexual context, or engaging in acts which will draw blood. (not cutting)
+? Pertains spanking with specific types of paddles that can pierce the skin to allow a drop or two of blood to be drawn.  This is NOT cutting.
 * Period
 ? The act of being comfortable having sex while on your period.
 * Watersports
-? The act of being cleaned up in the shower with urine after a session.  This is not a degradation mindset, but more of cleaning up after a session.
+? The act of being "cleaned up" in the shower with urine after a session.  This is not a degradation mindset, but more of cleaning up after a session.
 * Cum Play
 ? Any number of situations focused on playing with cum.
 * Squirting
@@ -193,7 +194,7 @@
 
 #Touch & Stimulation
 (Receiving)
-* Foot play
+* Foot Play
 ? The act of incorporating the feet or feet paws into the sexual context of an RP, including but not limited to the worshiping of feet, receiving sexual gratification from the sight or smell of feet and/or humping feet, sometimes to the point of orgasm.
 * Tickling
 ? The act of tickling and/or being tickled in a sexual context of an RP; or, receiving sexual stimulation from such.
