--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
 ? The act of incorporating the feet or feet paws into the sexual context of an RP, including but not limited to the worshiping of feet, receiving sexual gratification from the sight or smell of feet and/or humping feet, sometimes to the point of orgasm.
 * Tickling
 ? The act of tickling and/or being tickled in a sexual context of an RP; or, receiving sexual stimulation from such.
-* Sensation play
+* Sensation Play
 ? Sensation play describes a wide variety of activities, both vanilla and kinky, that use the body's senses as a way to arouse and provide stimulation to a partner. Although sensation play is often related to skin sensations, it doesn't have to be so limited. Sight, taste, and hearing can also be included in sensation play.
-* Electro stimulation
+* Electro Stimulation
 ? The use of sex toys that carry an electrical current; sometimes painful.
 
 #Misc. Fetish
