--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
 ? The use of reinforcement (rewards and/or punishments) in order to train a submissive to obey the various commands of a master.
 * Begging
 ? The self-abasing act of pleading, as a form of submission, being incorporated into an RP.
-* Forced orgasm
+* Forced Orgasm
 ? A forced orgasm is consensual BDSM or kinky sexual play whereby a person consents to be forced to orgasm in a way that is beyond their control.
-* Orgasm control
+* Orgasm Control
 ? Refers to the dominant being in control of when the submissive achieves orgasm, either by physical means or by command; typically involves domination and/or excessive teasing and edging; orgasm may be completely denied.
-* Orgasm denial
+* Orgasm Denial
 ? Refers to the dominant denying the submissive orgasm.
 
 
@@ -209,8 +209,8 @@
 ? The act of placing one's hand(s) and/or arm(s) into a vagina, or receiving such actions.
 * Gangbang
 ? When multiple partners, usually 3 or more, engage in sexual intercourse with a single willing partner.
-* Breath play
-? A situation in which at least one character will have physical control over the breathing habits of another character, often by either intermittent choking and/or due to the penetration of the throat.
+* Breath Play
+? The act of physical control over the breathing habits of another character.  This often starts with covering mouth first, allowing sub to breathe through nose. Then covering both mouth and nose, causing sub to gasp for air but not pass out.
 * Breeding
 ? Entails the mindset of liking the idea of a act of sexual intercourse for the sole purpose of inducing pregnancy.
 * Non-Consent
@@ -245,11 +245,11 @@
 
 #Pain
 (Receiving)
-* Light Nipple play
-? Nipple play is the practice of touching, rubbing, or sucking on nipples during sex.
-* Hard Nipple play
-? Nipple play is the practice of biting, touching, rubbing, or sucking with the intent to cause some pain
-* Nipple clamps
+* Light Nipple Play
+? Nipple Play is the practice of touching, rubbing, or sucking on nipples during sex.
+* Hard Nipple Play
+? Nipple Play is the practice of biting, touching, rubbing, or sucking with the intent to cause some pain
+* Nipple Clamps
 ? pressure device applied to nipples to create pain which produces pleasure.
 * Clothes Pins
 ? Pinching sking between the forks of a clothes pin
@@ -269,8 +269,8 @@
 ? The act of being choked until the sub passes out.
 * Beating
 ? Being struck with fists or other objects
-* Cock slapping
-? slapping my cock on your pussy or face to tease or because you are naughty
+* Cock Slapping
+? slapping a cock on your pussy or face to tease or because you are naughty
 * Hot Wax
 ? The act of using wax, typically hot candle wax, as a form of sexual stimulation and/or torture, or receiving such actions.
 
@@ -278,9 +278,9 @@
 (Receiving)
 * Visable Bruising
 ? Rough physical play that leaves discoloration on skin that may be visible with normal clothing (shirt, pants, etc)
-* Somewhat hidden bruising
+* Somewhat Hidden Bruising
 ? Rough physical play that leaves discoloration on skin that may be visible with less normal clothing such as bikini, shorts, short sleeve shirt
-* Hidden brusing
+* Hidden Brusing
 ? Rough physical play that leaves discoloration on skin that may be visible only when fully nude, bikini season safe
 * Scratching
 ? One character scratching another with their nails or claws, sometimes leaving marks; sometimes but not necessarily painful.
