--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 * Asphyxiation
 ? The act of being choked until the sub passes out.
 * Beating
-? Being struck with fists or other objects
+? Being struck with fists or other objects.
 * Cock Slapping
 ? slapping a cock on your pussy or face to tease or because you are naughty
 * Hot Wax
