--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 * Beating
 ? Being struck with fists or other objects.
 * Cock Slapping
-? slapping a cock on your pussy or face to tease or because you are naughty
+? slapping a cock on your pussy or face to tease or because you are naughty.
 * Hot Wax
 ? The act of using wax, typically hot candle wax, as a form of sexual stimulation and/or torture, or receiving such actions.
 
