--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 * Caning
 ? Caning is a technique used in BDSM in which the dominant repeatedly strikes the submissive with a long flexible cane, usually on the buttocks.
 * Gagging
-? Being made to gag by objects inserted into the mouth, possibly resulting in a lot of spit and getting sloppy (not to extreme to make you throw up though)
+? Being made to gag by objects inserted into the mouth, possibly resulting in a lot of spit and getting sloppy (not to extreme to make you throw up though).
 * Choking
 ? Being made to choke by placing hands around the neck in the proper area, i.e. NOT the wind pipe
 * Asphyxiation
