--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 * Gagging
 ? Being made to gag by objects inserted into the mouth, possibly resulting in a lot of spit and getting sloppy (not to extreme to make you throw up though).
 * Choking
-? Being made to choke by placing hands around the neck in the proper area, i.e. NOT the wind pipe
+? Being made to choke by placing hands around the neck in the proper area, i.e. NOT the windpipe.
 * Asphyxiation
 ? The act of being choked until the sub passes out.
 * Beating
