--- a/index.html
+++ b/index.html
@@ -82,10 +82,6 @@
 ? Enjoying the act of a your partner fucking your face, whether upright or upside down, but without additional force of pushing head down further with hands 
 * Hard Face Fucking
 ? Enjoying the act of a your partner fucking your face as described above, but with the partner allowed to use hands and force down further or harder
-* Swallowing
-? The act of orally consuming semen, either directly or indirectly from a penis.
-* Facials
-? The act of cumming directly on to one's face.
 * Cunnilingus
 ? Sexual stimulation by direct, physical contact of the mouth or tongue to female genitals.
 * Anal sex
@@ -103,6 +99,8 @@
 * Vibrators
 ? a vibrating device used for sexual stimulation.* Alcohol
 ? The use of alcohol in the context of an RP to elevate the sensations of sex.
+* Alcohol
+? The use of alcohol to elevate the sensations of sex.
 * Non-Alcohol
 ? The use of other things to get into the mood in the context of an RP, typically use of marijuana, shrooms, etc to elevate the sensations of sex.
 
@@ -158,16 +156,20 @@
 
 #Fluids
 (General)
+* Cum Play
+? Any number of situations focused on playing with cum.
+* Swallowing
+? The act of orally consuming semen, either directly or indirectly from a penis.
+* Facials
+? The act of cumming directly on to one's face.
 * Blood
 ? Pertains spanking with specific types of paddles that can pierce the skin to allow a drop or two of blood to be drawn.  This is NOT cutting.
 * Period
 ? The act of being comfortable having sex while on your period.
-* Watersports
-? The act of being "cleaned up" in the shower with urine after a session.  This is not a degradation mindset, but more of cleaning up after a session.
-* Cum Play
-? Any number of situations focused on playing with cum.
 * Squirting
 ? A yummy grapefruit soda... that leaves satification. LOL.  Actually, you squirt, like to squirt, or want to try to squirt.
+* Watersports
+? The act of being "cleaned up" in the shower with urine after a session.  This is not a degradation mindset, but more of cleaning up after a session.
 * Spit/Saliva - Pussy
 ? The act of spitting a little on your pussy.
 * Spit/Saliva - Body
