--- a/index.html
+++ b/index.html
@@ -156,8 +156,6 @@
 
 #Fluids
 (General)
-* Cum Play
-? Any number of situations focused on playing with cum.
 * Swallowing
 ? The act of orally consuming semen, either directly or indirectly from a penis.
 * Facials
@@ -215,8 +213,10 @@
 ? The act of physical control over the breathing habits of another character.  This often starts with covering mouth first, allowing sub to breathe through nose. Then covering both mouth and nose, causing sub to gasp for air but not pass out.
 * Breeding
 ? Entails the mindset of liking the idea of a act of sexual intercourse for the sole purpose of inducing pregnancy.
-* Non-Consent
-? Being taken against one's will, often through force (safe).
+* Dubious Consent
+? Situations where one's consent is in questions, though not outright rape.
+* Non-Consent/ Rape Fantasy
+? Being taken against one's will, often through force (safely).
 * Sleep play
 ? Engaging in sexual acts with an unconscious/asleep partner.
 * Exhibitionism
